@@ -20,15 +20,6 @@ name|java
 operator|.
 name|io
 operator|.
-name|IOException
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
 name|Reader
 import|;
 end_import
@@ -73,9 +64,6 @@ operator|.
 name|ClassicSimilarity
 import|;
 end_import
-begin_comment
-comment|// javadocs
-end_comment
 begin_import
 import|import
 name|org
@@ -91,9 +79,6 @@ operator|.
 name|Similarity
 import|;
 end_import
-begin_comment
-comment|// javadocs
-end_comment
 begin_import
 import|import
 name|org
@@ -133,7 +118,7 @@ name|IndexableFieldType
 name|fieldType
 parameter_list|()
 function_decl|;
-comment|/**    * Creates the TokenStream used for indexing this field.  If appropriate,    * implementations should use the given Analyzer to create the TokenStreams.    *    * @param analyzer Analyzer that should be used to create the TokenStreams from    * @param reuse TokenStream for a previous instance of this field<b>name</b>. This allows    *              custom field types (like StringField and NumericField) that do not use    *              the analyzer to still have good performance. Note: the passed-in type    *              may be inappropriate, for example if you mix up different types of Fields    *              for the same field name. So it's the responsibility of the implementation to    *              check.    * @return TokenStream value for indexing the document.  Should always return    *         a non-null value if the field is to be indexed    * @throws IOException Can be thrown while creating the TokenStream    */
+comment|/**    * Creates the TokenStream used for indexing this field.  If appropriate,    * implementations should use the given Analyzer to create the TokenStreams.    *    * @param analyzer Analyzer that should be used to create the TokenStreams from    * @param reuse TokenStream for a previous instance of this field<b>name</b>. This allows    *              custom field types (like StringField and NumericField) that do not use    *              the analyzer to still have good performance. Note: the passed-in type    *              may be inappropriate, for example if you mix up different types of Fields    *              for the same field name. So it's the responsibility of the implementation to    *              check.    * @return TokenStream value for indexing the document.  Should always return    *         a non-null value if the field is to be indexed    */
 DECL|method|tokenStream
 specifier|public
 name|TokenStream
@@ -145,8 +130,6 @@ parameter_list|,
 name|TokenStream
 name|reuse
 parameter_list|)
-throws|throws
-name|IOException
 function_decl|;
 comment|/**     * Returns the field's index-time boost.    *<p>    * Only fields can have an index-time boost, if you want to simulate    * a "document boost", then you must pre-multiply it across all the    * relevant fields yourself.     *<p>The boost is used to compute the norm factor for the field.  By    * default, in the {@link Similarity#computeNorm(FieldInvertState)} method,     * the boost value is multiplied by the length normalization factor and then    * rounded by {@link ClassicSimilarity#encodeNormValue(float)} before it is stored in the    * index.  One should attempt to ensure that this product does not overflow    * the range of that encoding.    *<p>    * It is illegal to return a boost other than 1.0f for a field that is not    * indexed ({@link IndexableFieldType#indexOptions()} is IndexOptions.NONE) or    * omits normalization values ({@link IndexableFieldType#omitNorms()} returns true).    *    * @see Similarity#computeNorm(FieldInvertState)    * @see ClassicSimilarity#encodeNormValue(float)    */
 DECL|method|boost
