@@ -701,8 +701,6 @@ parameter_list|,
 name|TokenStream
 name|reuse
 parameter_list|)
-throws|throws
-name|IOException
 block|{
 name|lastSeen
 operator|=
