@@ -746,8 +746,6 @@ parameter_list|,
 name|TokenStream
 name|reuse
 parameter_list|)
-throws|throws
-name|IOException
 block|{
 return|return
 name|getRealValue
